--- a/style.css
+++ b/style.css
@@ -228,6 +228,7 @@
   }
 
   .todo-container {
+    overflow-y: auto; 
     -webkit-box-shadow: 1px 8px 10px var(--shadow-color), 2px 5px 7px var(--shadow-color), 1px 7px 4px var(--shadow-color);
             box-shadow: 1px 8px 10px var(--shadow-color), 2px 5px 7px var(--shadow-color), 1px 7px 4px var(--shadow-color);
   }
