--- a/style.css
+++ b/style.css
@@ -590,7 +590,6 @@
   }
 }
 
-
 /* Medium screens (e.g., Galaxy Fold phones) */
 @media screen and (min-width: 768px) and (max-width: 1023px) {
   body {
@@ -609,7 +608,7 @@
   }
   .todo-item {
     height: 2.5rem;
-    padding-right: 2rem; /* Adjust the padding for delete button positioning */
+    padding-right: 2rem; 
   }
   .todo-item > .btn {
     width: 20px;
@@ -633,8 +632,6 @@
   }
 }
 
-
-
 /* Small screens (e.g., Nest Hub) */
 @media screen and (max-width: 767px) {
   body {
@@ -653,7 +650,7 @@
   }
   .todo-item {
     height: 2.2rem;
-    padding-right: 1.5rem; /* Adjust the padding for delete button positioning */
+    padding-right: 1.5rem; 
   }
   .todo-item > .btn {
     width: 25px;
@@ -678,14 +675,13 @@
   
 }
 
-
 .todo-container {
   display: flex;
   flex-direction: column;
-  max-height: 400px; /* Set the desired max height for the container */
-  overflow-y:auto; /* Add a vertical scroll bar */
+  max-height: 400px; 
+  overflow-y:auto; 
 }
-/* Change the color of the scrollbar track */
+
 ::-webkit-scrollbar {
   width: 8px; 
 }
@@ -702,14 +698,6 @@
 body::-webkit-scrollbar {
   width: 8px;
 }
-/*web scrollbar*/
-body::-webkit-scrollbar-track {
-  background-color: var(--bg-color);
-}
-
-body::-webkit-scrollbar-thumb {
-  background-color:#3a7bfd;
-}
 
 .filters {
   position: sticky;
@@ -721,7 +709,7 @@ body::-webkit-scrollbar-thumb {
 
 .actions {
   position: sticky;
-  bottom: 0px; /* Adjust the position as needed */
+  bottom: 0px; 
   width: 100%;
   background-color: var(--bg-color);
   z-index: 1;
