--- a/style.css
+++ b/style.css
@@ -703,7 +703,7 @@ body::-webkit-scrollbar {
   position: sticky;
   bottom: 0;
   width: 100%;
-  background-color: var(--bg-color);
+  background-color: var(--card-bg);
   z-index: 1;
 }
 
@@ -711,6 +711,6 @@ body::-webkit-scrollbar {
   position: sticky;
   bottom: 0px; 
   width: 100%;
-  background-color: var(--bg-color);
+  background-color: var(--card-bg);
   z-index: 1;
 }
